<resources>
    <string name="app_name">RentACar</string>
    <string name="start">Comenzar</string>
    <string name="info_v">Informática V</string>
    <string name="final_project">Proyecto Final</string>
    <string name="project_name">Rent a Car</string>
    <string name="catalogs">Catálogo</string>
    <string name="cars_models">Modelos</string>
    <string name="type_car_pickup">Pickup</string>
    <string name="type_car_camioneta">Camioneta</string>
    <string name="type_car_sedan">Sedan</string>
    <string name="type_car_hatchback">Hatchback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">Finalizar</string>
    <string name="car_rent">Renta de Vehículo</string>
    <string name="manager">Gerente</string>
    <string name="date">Fecha</string>
    <string name="client">Cliente</string>
    <string name="pay_data">Datos de pago</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="expiration_date">Fecha de exp.</string>
    <string name="cvc">CVC</string>
    <string name="report">Reporte</string>
    <string name="rent_success">Entrega</string>

    <string name="key_store">KEY_STORE</string>
    <string name="key_clients">KEY_CLIENTS</string>
    <string name="key_staff">KEY_STAFF</string>
    <string name="key_rents">KEY_RENT</string>


    <string name="title_activity_clients_catalog">ClientsCatalogActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>