<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:src="@drawable/img_start"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_project"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_v"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textButton_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="10dp"
        android:paddingHorizontal="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_button"/>

</LinearLayout>