<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarsCatalogActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catalogs"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_Hatchback"
            android:layout_width="300dp"
            android:layout_height="130dp"
            app:cardCornerRadius="12dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_bg_hatchback"
                android:scaleType="centerCrop"
                android:contentDescription="@null"
                android:alpha="0.6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_car_hatchback"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="5dp"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_Sedan"
            android:layout_width="300dp"
            android:layout_height="130dp"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_bg_sedan"
                android:scaleType="centerCrop"
                android:contentDescription="@null"
                android:alpha="0.6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_car_sedan"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="5dp"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_Camioneta"
            android:layout_width="300dp"
            android:layout_height="130dp"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_bg_camioneta"
                android:scaleType="centerCrop"
                android:contentDescription="@null"
                android:alpha="0.6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_car_camioneta"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="5dp"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_Pickup"
            android:layout_width="300dp"
            android:layout_height="130dp"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_bg_pickup"
                android:scaleType="centerCrop"
                android:contentDescription="@null"
                android:alpha="0.6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_car_pickup"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="5dp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>