<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="10dp"
        android:text="@string/project_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/img_start"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_project"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_v"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_vehicle"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/border_menu"
            android:gravity="center"
            android:layout_height="40dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:text="•  Catálogo de vehículos"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_next"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_clients"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/border_menu"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_height="40dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:text="•  Clientes"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_next"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_gerentes"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/border_menu"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_height="40dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:text="•   Gerentes"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_next"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_rentas"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_menu"
            android:gravity="center"
            android:layout_height="40dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:text="•  Rentas"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_next"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>